# django-model-mixins

./: README.md  pyproject.toml
account/: models.py
config/: settings.py
core/: mixins.py  models.py
