[tool.poetry]
name = "django-mixins"
version = "0.1.0"
description = ""
authors = ["Brock Herion <brockheriondev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
